# Aleph

./: AGENTS.md  Cargo.toml  README.md  package.json
src/: app.rs  cli.mjs  main.rs  ui.rs
src/app/: agent.rs  ai_edit.rs  auth_chat.rs  commands.rs  commands_notes.rs  core_accessors.rs  editor_input.rs  input.rs  model.rs  notes_editor.rs  obsidian.rs  strix.rs  temporal_forks.rs  tests.rs
src/lib/: config.mjs  manifest.mjs  obsidian.mjs  open-uri.mjs
src/ui/: chat_settings.rs  diff.rs  editor.rs  image_preview.rs  markdown.rs  panels.rs  tests.rs
test/: obsidian.test.mjs
