[package]
name = "aleph"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
crossterm = "0.28"
keyring = { version = "3", features = ["windows-native"] }
rand = "0.8"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"
sha2 = "0.10"
tui-markdown = "0.3.7"
urlencoding = "2"
