[package]
name = "strix-aleph"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Shubhankar Dixit"]
description = "TUI for your notes — Obsidian vaults, Strix sync, and connect with Codex/Claude Code/etc. to manage your knowledge from the terminal."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Shubhankar-Dixit/Aleph"
homepage = "https://github.com/Shubhankar-Dixit/Aleph"
keywords = ["tui", "notes", "obsidian", "strix", "cli"]
categories = ["command-line-utilities"]
exclude = [
    "aleph_idea.md",
    "Ideas.md",
    "ideas2.md",
    "HOWTOTHINK.md",
    "ascii.md",
    "ascii-eye2.md",
    "strix-agents.md",
    "TODOS.md",
]

[dependencies]
anyhow = "1"
base64 = "0.22"
crossterm = "0.28"
keyring = { version = "3", features = ["windows-native"] }
rand = "0.8"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"
sha2 = "0.10"
tui-markdown = "0.3.7"
urlencoding = "2"
